reset commit locally due to fatal:unable to create thread

--- a/.gitignore
+++ b/.gitignore
@@ -154,7 +154,8 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
-record/**/*.pt
-record/**/*.pickle
-record/**/*dataset/
+#record/**/*.pt
+#record/**/*.pickle
+#record/**/*dataset/
+record/
 data/
