test commit for less files to avoid unable to create thread error

--- a/.gitignore
+++ b/.gitignore
@@ -154,8 +154,10 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
-#record/**/*.pt
-#record/**/*.pickle
-#record/**/*dataset/
-record/
+record/**/*.pt
+record/**/*.pickle
+record/**/*dataset/
+record/**/*.png
+record/**/*ffpp*/
+#record/
 data/
