--- a/.gitignore
+++ b/.gitignore
@@ -158,8 +158,8 @@ record/**/*.pt
 record/**/*.pickle
 record/**/*dataset/
 record/**/*.png
-record/**/*3*/
-record/**/*4*/
-record/**/*5*/
+#record/**/*3*/
+#record/**/*4*/
+#record/**/*5*/
 #record/
 data/
