--- a/.gitignore
+++ b/.gitignore
@@ -154,7 +154,15 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
-record/
+record/**/*.pt
+record/**/*.pickle
+record/**/*dataset/
+#record/**/*.png
+#record/**/*3*/
+#record/**/*4*/
+#record/**/*5*/
+#record/
 data/
 
+# Ignore macOS system files
 .DS_Store
